nemu/include/cpu/.err
instr/ret.h:4:14: error: 'uint32_t' was not declared in this scope
 int ret_near(uint32_t eip,uint8_t opcode);
              ^~~~~~~~
instr/ret.h:4:14: note: suggested alternative: 'char32_t'
 int ret_near(uint32_t eip,uint8_t opcode);
              ^~~~~~~~
              char32_t
instr/ret.h:4:27: error: 'uint8_t' was not declared in this scope
 int ret_near(uint32_t eip,uint8_t opcode);
                           ^~~~~~~
instr/ret.h:4:41: error: expression list treated as compound expression in initializer [-fpermissive]
 int ret_near(uint32_t eip,uint8_t opcode);
                                         ^
instr/ret.h:5:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(ret_near_imm16);
                ^
instr/ret.h:6:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(iret);
                ^
